# SSAFY_Homework

./: 123.md
0908homework/: 1.vue  2.vue  3.vue  4.vue  5.vue  6.vue  7.vue
0909homework/2/vue-client/: package-lock.json
0909homework/3/node-middleware/: package-lock.json
0909homework/3/vue-client/: package.json
0909homework/4/node-middleware/: index.mjs
0909homework/4/vue-client/: .env.local
0909homework/5/node-middleware/: index.mjs
0909homework/6/node-middleware/: package.json
0909homework/6/vue-client/: README.md
0909homework/7/node-client/: index.mjs
0923oct/: fibonacci_for_loop.m  fibonacci_while_loop.m  fruit_inventory.mat  homework3.m  homework4.m  homework4_2.m  homework4_3.m  homework5.m  homework6.m  lect0923.m  matrix_addition.m  matrix_inverse.m  matrix_multiplication.m  matrix_subtraction.m  matrix_transpose.m  mydata.mat  quadratic_function.m  square_number.m
0924homework/: factorial_recursive.m  homework1.m  homework2.m  homework3.m  homework4.m  homework5.m  homework6.m  homework7.m  test.m
0925_1_oct/: homework2.m  test.m
0929homework/: R_x.m  R_z.m  Rot.m  Trans.m  homework1.m  homework2.m  homework4.m  main_2.m  test.m
1001homework/homework1/: homework1readme.md
1001homework/homework6,7/src/ssafy_publisher_subscriber/: CMakeLists.txt  package.xml
1001homework/homework6,7/src/ssafy_publisher_subscriber/src/: ssafy_publisher.cpp  ssafy_subscriber.cpp
ai-py/: README.md
ai-py/client/: package-lock.json  package.json
ai-py/client/src/: App.vue
ai-py/server/: .env.example  package-lock.json  package.json  server.mjs
(+52 files in other folders)
